<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tvTituloText"
            android:textSize="35sp"
            android:layout_marginTop="30dp"/>
        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvNombreText"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/etNombreHintText"
            android:inputType="textPersonName"
            android:textSize="18sp"
            tools:ignore="Autofill,TextContrastCheck" />
        <RadioGroup
            android:id="@+id/rgOpciones"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <RadioButton
                android:id="@+id/rbSobre10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbSobre10Text"
                android:textSize="15sp"/>
            <RadioButton
                android:id="@+id/rbSobre100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbSobre100Text"
                android:textSize="15sp"/>
        </RadioGroup>
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btnEmpezar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnText"
            android:layout_gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>