<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pregunta2"
    android:background="@drawable/background">
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentProgress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout

        android:layout_marginTop="196dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:weightSum="4"
        android:background="@drawable/bg_customlogin">
        <ImageButton
            android:id="@+id/btnBackPregunta2"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:background="@drawable/arrow"
            android:backgroundTint="@color/gray"/>

        <TextView
            android:id="@+id/tvPregunta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/pregunta2Text"
            android:gravity="center"
            />
        <RadioGroup
            android:id="@+id/rgPregunta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="60dp"
            android:layout_gravity="center">
            <RadioButton
                android:layout_marginTop="20dp"
                android:id="@+id/rbRespuesta1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta2_respuesta1"
                android:textSize="25sp"/>
            <RadioButton
                android:layout_marginTop="20dp"
                android:id="@+id/rbRespuesta2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta2_respuesta2"
                android:textSize="25sp"/>
            <RadioButton
                android:layout_marginTop="20dp"
                android:id="@+id/rbRespuesta3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta2_respuesta3"
                android:textSize="25sp"/>
            <RadioButton
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/pregunta2_respuesta4"/>
        </RadioGroup>
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/btnSiguienteText"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/blue"
            android:layout_gravity="center"/>
        



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>